# maini

./: .gitignore  LICENSE  Makefile  README.md  comfig.toml.example  main.py  pyproject.toml
core/: database.py
interfaces/: cli.py
src/maini/core/: config_manager.py  database.py
src/maini/interfaces/: cli.py
